add teams and gallery

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="body" style="overflow-x: hidden;">
 
 <head>
     <meta charset="UTF-8">
@@ -70,7 +70,7 @@
     <link rel="stylesheet" type="text/css" href="/project/css/responsive.css" />
 </head>
 
-<body class="body" >
+<body >
     <!-- <--------Header Section--------->
     <header class="head  ">
         <img src="/assets/logo.png" class="logo" alt="">
@@ -80,12 +80,12 @@
                 <li><a>ABOUT US</a>
                     <ul class="about-dropdown">
                         <li><a class="hover-underline-animation" href="./about.html">Global Excel</a></li>
-                        <li><a class="hover-underline-animation" href="#">Teams</a></li>
-                        <li><a class="hover-underline-animation" href="#">Gallery</a></li>
+                        <li><a class="hover-underline-animation" href="./About us/teams.html">Teams</a></li>
+                        <li><a class="hover-underline-animation" href="./About us/gallery.html">Gallery</a></li>
                     </ul>
                 </li>
                 <li><a>ABROAD STUDY </a>
-                   
+
                     <ul class="roadmap-dropdown">
                         <li><a class="hover-underline-animation" href="./Roadmap/studyingermany.html">Study In
                                 Germany</a></li>
@@ -138,8 +138,26 @@
                 </div><!-- /.container -->
             </div><!-- page-title end-->
 
+
             <!--site-main start-->
             <div class="site-main">
+                <div class="col-lg-12" style="padding-left: 5rem;">
+                    <div class="container">
+                        <div class="box">
+                            <!-- section title -->
+                            <div class="section-title  with-desc clearfix">
+                                <div>
+                                    <h2 class="title"> <span style="color: #3692b9; font-weight: 900;"> GLOBAL EXCEL</span> UPSKILL AND STUDY INFO CENTER </h2>
+                                    <br>
+                                    <p style="font-weight: 600;">Starting from 2000, Global Excel has more than 40 years of development in the field of training. We have more than 200 branches across Germany and many other European branches, as well as representative offices on every continent with more than 20,000 students, enrolled each year.</p>
+
+                                </div>
+                            </div>
+                            <!-- section title end -->
+                        </div>
+                    </div>
+                </div>
+
 
                 <!-- about-section -->
                 <section class="ttm-row about-top-section clearfix">
@@ -254,9 +272,6 @@
                                         <div class="col-md-6 col-sm-6">
                                             <!--featured-icon-box-->
                                             <div class="featured-icon-box style1 left-icon right-border">
-                                                <div class="">
-                                                    <img src="project/images/about-sign.png" alt="sign">
-                                                </div>
                                                 <div class="featured-content">
                                                     <div class="featured-title">
                                                         <h5>Roshik Duwal</h5>
@@ -380,146 +395,7 @@
                 </section>
                 <!-- services-section end -->
 
-                <!-- team-section -->
-                <section class="ttm-row ttm-bg ttm-bgimage-yes bg-img3 team-section clearfix">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-3 col-sm-2"></div>
-                            <div class="col-md-6 col-sm-8">
-                                <!-- section title -->
-                                <div class="section-title text-center with-desc clearfix">
-                                    <div class="title-header">
-                                        <h5>OUR TEAM MEMBER</h5>
-                                        <h2 class="title">Discover our team and experts</h2>
-                                    </div>
-                                </div><!-- section title end -->
-                            </div>
-                            <div class="col-md-3 col-sm-2"></div>
-                        </div>
-                        <!-- row -->
-                        <div class="row">
-                            <div class="wrap-team team-slide owl-carousel" data-item="3" data-nav="false"
-                                data-dots="false" data-auto="true">
-                                <!-- featured-imagebox-team -->
-                                <div class="featured-imagebox featured-imagebox-team">
-                                    <div class="featured-thumbnail">
-                                        <img class="img-fluid" src="project/images/team-member/team-img01.jpg"
-                                            alt="image">
-                                        <div class="ttm-social-links-wrapper">
-                                            <ul class="social-icons list-inline">
-                                                <li class="social-facebook"><a class="tooltip-top" target="_blank"
-                                                        href="#" data-tooltip="Facebook"><i class="fa fa-facebook"
-                                                            aria-hidden="true"></i></a></li>
-                                                <li class="social-twitter"><a class=" tooltip-top" target="_blank"
-                                                        href="#" data-tooltip="Twitter"><i class="fa fa-twitter"
-                                                            aria-hidden="true"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="featured-content featured-content-team">
-                                        <div class="featured-title">
-                                            <h5><a href="team-details.html">Amelia Daniel</a></h5>
-                                        </div>
-                                        <p class="category">Chairman and founder</p>
-                                    </div>
-                                </div><!-- featured-imagebox-team end-->
-                                <!-- featured-imagebox-team -->
-                                <div class="featured-imagebox featured-imagebox-team">
-                                    <div class="featured-thumbnail">
-                                        <img class="img-fluid" src="project/images/team-member/team-img02.jpg"
-                                            alt="image">
-                                        <div class="ttm-social-links-wrapper">
-                                            <ul class="social-icons list-inline">
-                                                <li class="social-facebook"><a class="tooltip-top" target="_blank"
-                                                        href="#" data-tooltip="Facebook"><i class="fa fa-facebook"
-                                                            aria-hidden="true"></i></a></li>
-                                                <li class="social-twitter"><a class=" tooltip-top" target="_blank"
-                                                        href="#" data-tooltip="Twitter"><i class="fa fa-twitter"
-                                                            aria-hidden="true"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="featured-content featured-content-team">
-                                        <div class="featured-title">
-                                            <h5><a href="team-details.html">Alex Mason</a></h5>
-                                        </div>
-                                        <p class="category">Visual Media</p>
-                                    </div>
-                                </div><!-- featured-imagebox-team end-->
-                                <!-- featured-imagebox-team -->
-                                <div class="featured-imagebox featured-imagebox-team">
-                                    <div class="featured-thumbnail">
-                                        <img class="img-fluid" src="project/images/team-member/team-img03.jpg"
-                                            alt="image">
-                                        <div class="ttm-social-links-wrapper">
-                                            <ul class="social-icons list-inline">
-                                                <li class="social-facebook"><a class="tooltip-top" target="_blank"
-                                                        href="#" data-tooltip="Facebook"><i class="fa fa-facebook"
-                                                            aria-hidden="true"></i></a></li>
-                                                <li class="social-twitter"><a class=" tooltip-top" target="_blank"
-                                                        href="#" data-tooltip="Twitter"><i class="fa fa-twitter"
-                                                            aria-hidden="true"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="featured-content featured-content-team">
-                                        <div class="featured-title">
-                                            <h5><a href="team-details.html">Michael Harper</a></h5>
-                                        </div>
-                                        <p class="category">Sales Manager </p>
-                                    </div>
-                                </div><!-- featured-imagebox-team end-->
-                                <!-- featured-imagebox-team -->
-                                <div class="featured-imagebox featured-imagebox-team">
-                                    <div class="featured-thumbnail">
-                                        <img class="img-fluid" src="project/images/team-member/team-img04.jpg"
-                                            alt="image">
-                                        <div class="ttm-social-links-wrapper">
-                                            <ul class="social-icons list-inline">
-                                                <li class="social-facebook"><a class="tooltip-top" target="_blank"
-                                                        href="#" data-tooltip="Facebook"><i class="fa fa-facebook"
-                                                            aria-hidden="true"></i></a></li>
-                                                <li class="social-twitter"><a class=" tooltip-top" target="_blank"
-                                                        href="#" data-tooltip="Twitter"><i class="fa fa-twitter"
-                                                            aria-hidden="true"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="featured-content featured-content-team">
-                                        <div class="featured-title">
-                                            <h5><a href="team-details.html">Jhon Martin</a></h5>
-                                        </div>
-                                        <p class="category">Chairman and founder</p>
-                                    </div>
-                                </div><!-- featured-imagebox-team end-->
-                                <!-- featured-imagebox-team -->
-                                <div class="featured-imagebox featured-imagebox-team">
-                                    <div class="featured-thumbnail">
-                                        <img class="img-fluid" src="project/images/team-member/team-img05.jpg"
-                                            alt="image">
-                                        <div class="ttm-social-links-wrapper">
-                                            <ul class="social-icons list-inline">
-                                                <li class="social-facebook"><a class="tooltip-top" target="_blank"
-                                                        href="#" data-tooltip="Facebook"><i class="fa fa-facebook"
-                                                            aria-hidden="true"></i></a></li>
-                                                <li class="social-twitter"><a class=" tooltip-top" target="_blank"
-                                                        href="#" data-tooltip="Twitter"><i class="fa fa-twitter"
-                                                            aria-hidden="true"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="featured-content featured-content-team">
-                                        <div class="featured-title">
-                                            <h5><a href="team-details.html">Evelyn Jackson</a></h5>
-                                        </div>
-                                        <p class="category">Visual Media</p>
-                                    </div>
-                                </div><!-- featured-imagebox-team end-->
-                            </div>
-                        </div><!-- row end -->
-                    </div>
-                </section>
-                <!-- team-section end -->
+
 
 
                 <!-- client-section -->
@@ -609,7 +485,7 @@
                 <div class="second-footer ttm-textcolor-white">
                     <div class="container">
                         <div class="row">
-                            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 widget-area">
                                 <div class="widget widget_text  clearfix">
                                     <h3 class="widget-title">About Business</h3>
                                     <div class="textwidget widget-text">
@@ -640,7 +516,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 widget-area">
                                 <div class="widget widget_nav_menu clearfix">
                                     <h3 class="widget-title">Quick Links</h3>
                                     <ul id="menu-footer-services">
@@ -653,6 +529,21 @@
                                         <li><a href="#">Meet Our Experts</a></li>
                                     </ul>
                                 </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 widget-area">
+                                <div class="widget widget_text  clearfix">
+                                    <h3 class="widget-title">ADDRESS</h3>
+                                    <div class="textwidget widget-text"><i
+                                            class="fa-sharp fa-solid fa-location-dot"></i> &ensp; Kathmandu</div>
+                                    <br>
+                                    <div class="textwidget widget-text"><a href="mailto:info@gesic.edu.np"><i
+                                                class="fa-sharp fa-solid fa-location-dot"></i> info@gesic.edu.np</a>
+                                    </div>
+                                    <br>
+                                    <div class="textwidget widget-text"> <a href="tel:+977-9860077825"> <i
+                                                class="fa-solid fa-phone"></i> &ensp;9860077825</a></div>
+                                </div>
+
                             </div>
 
                         </div>
