--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="body" style="overflow-x: hidden;">
 
 <head>
     <meta charset="UTF-8">
@@ -63,9 +63,9 @@
     <link rel="stylesheet" type="text/css" href="/project/css/responsive.css" />
 </head>
 
-<body class="body">
+<body >
     <!-- <--------Header Section--------->
-    <header class="header ">
+    <header class="header " >
         <div class="overlay"></div>
         <video autoplay loop muted plays-inline class="back-video">
             <source src="assets/video.mp4">
@@ -77,8 +77,8 @@
                 <li><a >ABOUT US</a>
                     <ul class="about-dropdown">
                         <li><a class="hover-underline-animation" href="./about.html">Global Excel</a></li>
-                        <li><a class="hover-underline-animation" href="#">Teams</a></li>
-                        <li><a class="hover-underline-animation" href="#">Gallery</a></li>
+                        <li><a class="hover-underline-animation" href="./About us/teams.html">Teams</a></li>
+                        <li><a class="hover-underline-animation" href="./About us/gallery.html">Gallery</a></li>
                     </ul>
                 </li>
                 <li><a >ABROAD STUDY</a>
@@ -160,9 +160,6 @@
                             <div class="col-md-6 col-sm-6">
                                 <!--featured-icon-box-->
                                 <div class="featured-icon-box style1 left-icon right-border">
-                                    <div class="">
-                                        <img src="/project/images/about-sign.png" alt="sign">
-                                    </div>
                                     <div class="featured-content">
                                         <div class="featured-title">
                                             <h5>Roshik Duwal</h5>
@@ -605,7 +602,7 @@
             <div class="second-footer ttm-textcolor-white">
                 <div class="container">
                     <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 widget-area">
                             <div class="widget widget_text  clearfix">
                                 <h3 class="widget-title">About Business</h3>
                                 <div class="textwidget widget-text">
@@ -636,7 +633,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 widget-area">
                             <div class="widget widget_nav_menu clearfix">
                                 <h3 class="widget-title">Quick Links</h3>
                                 <ul id="menu-footer-services">
@@ -649,6 +646,17 @@
                                     <li><a href="#">Meet Our Experts</a></li>
                                 </ul>
                             </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 widget-area">
+                            <div class="widget widget_text  clearfix">
+                                <h3 class="widget-title">ADDRESS</h3>
+                                <div class="textwidget widget-text"><i  class="fa-sharp fa-solid fa-location-dot"></i>  &ensp; Kathmandu</div>
+                                <br>
+                                <div class="textwidget widget-text"><a href="mailto:info@gesic.edu.np"><i class="fa-sharp fa-solid fa-location-dot"></i> info@gesic.edu.np</a> </div>
+                                <br>
+                                <div class="textwidget widget-text"> <a href="tel:+977-9860077825"> <i class="fa-solid fa-phone"></i>  &ensp;9860077825</a></div>
+                            </div>
+
                         </div>
 
                     </div>
