--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="body" style="overflow-x: hidden;">
 
 <head>
     <meta charset="UTF-8">
@@ -80,8 +80,8 @@
                     <li><a>ABOUT US</a>
                         <ul class="about-dropdown">
                             <li><a class="hover-underline-animation" href="./about.html">Global Excel</a></li>
-                            <li><a class="hover-underline-animation" href="#">Teams</a></li>
-                            <li><a class="hover-underline-animation" href="#">Gallery</a></li>
+                            <li><a class="hover-underline-animation" href="./About us/teams.html">Teams</a></li>
+                            <li><a class="hover-underline-animation" href="./About us/gallery.html">Gallery</a></li>
     
                         </ul>
                     </li>
@@ -250,7 +250,7 @@
             <div class="second-footer ttm-textcolor-white">
                 <div class="container">
                     <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 widget-area">
                             <div class="widget widget_text  clearfix">
                                 <h3 class="widget-title">About Business</h3>
                                 <div class="textwidget widget-text">
@@ -281,7 +281,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 widget-area">
                             <div class="widget widget_nav_menu clearfix">
                                 <h3 class="widget-title">Quick Links</h3>
                                 <ul id="menu-footer-services">
@@ -294,6 +294,17 @@
                                     <li><a href="#">Meet Our Experts</a></li>
                                 </ul>
                             </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 widget-area">
+                            <div class="widget widget_text  clearfix">
+                                <h3 class="widget-title">ADDRESS</h3>
+                                <div class="textwidget widget-text"><i  class="fa-sharp fa-solid fa-location-dot"></i>  &ensp; Kathmandu</div>
+                                <br>
+                                <div class="textwidget widget-text"><a href="mailto:info@gesic.edu.np"><i class="fa-sharp fa-solid fa-location-dot"></i> info@gesic.edu.np</a> </div>
+                                <br>
+                                <div class="textwidget widget-text"> <a href="tel:+977-9860077825"> <i class="fa-solid fa-phone"></i>  &ensp;9860077825</a></div>
+                            </div>
+
                         </div>
 
                     </div>
